--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <p class="s-para">Rock Paper Scissors</p>
     <button onclick="
     playGame('ROCK');
-  " class="move-button"><img src="/image/rock.png" class="move-icon"></button>
+  " class="move-button"><img src="image/rock.png" class="move-icon"></button>
 
     <button onclick="
     playGame('PAPER');
-  " class="move-button"><img src="/image/paper.png" class="move-icon"></button>
+  " class="move-button"><img src="image/paper.png" class="move-icon"></button>
 
     <button onclick="
     playGame('SCISSORS');
-  " class="move-button"><img src="/image/scissors.png"       class="move-icon"></button>
+  " class="move-button"><img src="image/scissors.png"       class="move-icon"></button>
 
     <p class="js-result s-result"></p>
     <p class="js-moves s-moves" ></P>
