--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <body>
     <p class="s-para">Rock Paper Scissors</p>
     <button onclick="
-    playGame('ROCK');
+    playGame('rock');
   " class="move-button"><img src="image/rock.png" class="move-icon"></button>
 
     <button onclick="
-    playGame('PAPER');
+    playGame('paper');
   " class="move-button"><img src="image/paper.png" class="move-icon"></button>
 
     <button onclick="
-    playGame('SCISSORS');
+    playGame('scissors');
   " class="move-button"><img src="image/scissors.png"       class="move-icon"></button>
 
     <p class="js-result s-result"></p>
